--- a/ServiceConsumerSpring/pom.xml
+++ b/ServiceConsumerSpring/pom.xml
@@ -35,6 +35,11 @@
 		    <version>8.0.11</version>
 		</dependency>
         
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.6</version>
+		</dependency>    
         
     </dependencies>
 
